# paid_server

./: .clang-format  .env.example  .env.test  .gitignore  README.md  run_all.sh  业务时序.md  操作文档.md  支付全流程.md  新版本更新.md  旧版_项目文档.md  项目文档.md
.github/workflows/: ci.yml
backend/: CMakeLists.txt  main.cpp  payment_impl.hpp  后端业务流程文档.md  后端文件架构.md  编译运行步骤.md
backend/common/: config.hpp  gateway_notify.hpp  http_server.hpp  jwt.hpp  logger.hpp  mysql_pool.hpp  password_verifier.hpp  redis_pool.hpp  thread_pool.hpp
backend/tests/: CMakeLists.txt  test_auth_login.cpp  test_http_server.cpp  test_http_support.hpp  test_http_worker_pool.cpp  test_jwt.cpp  test_main.cpp  test_password_verifier.cpp  test_payment_finalize.cpp  test_redis_session.cpp  测试步骤.md
frontend/: nginx.conf.template  start_nginx.sh  前端业务流程文档.md  前端文件架构.md  编译运行步骤.md
frontend/common/: api.js  config.js  qr_render.js
frontend/pages/: login.html  payment_confirm.html  payment_scan.html  real_auth_complete.html
gateway/: CMakeLists.txt  gateway_impl.hpp  main.cpp  编译运行步骤.md  网关业务流程文档.md  网关文件架构.md
gateway/common/: config.hpp  http_forwarder.hpp  http_server.hpp  logger.hpp  mysql_pool.hpp  session_store.hpp  thread_pool.hpp  ws_registry.hpp
gateway/tests/: CMakeLists.txt  test_handle_request.cpp  test_http_server.cpp  test_http_support.hpp  test_http_worker_pool.cpp  test_main.cpp  test_payment_result.cpp  test_routing.cpp  test_session_store.cpp  test_support.hpp  test_ws_helpers.cpp  测试步骤.md
sql_create_and_add/: setup_mysql_test_data.sh
数据库表结构/: 01_orders_交易订单表.md  02_accounts_游戏账号商品表.md  03_payment_sessions_支付会话表.md  04_payment_attempts_支付尝试记录表.md  05_account_rare_items_账号珍稀道具明细表.md  06_users_用户表结构.md
